--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 .highlight {
   background-color: #4fb847b9;
   /* Customize the highlight color */
-  color: white;
-  margin: 0.2rem;
+  /* color: white; */
+  /* margin: 0.2rem; */
   /* border-radius: 50%; */
 }
 
